--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -253,8 +253,7 @@ video {
 .app__dialog {
   z-index: 12;
   background-color: #fff;
-  width: 290px;
-  height: 180px;
+  width: 90%;
   border-radius: 2px;
   display: flex;
   position: absolute;
@@ -266,6 +265,11 @@ video {
   box-shadow: 0 9px 46px 8px rgba(0,0,0,.14), 0 11px 15px -7px rgba(0,0,0,.12), 0 24px 38px 3px rgba(0,0,0,.2);
 }
 
+.item_img{
+  max-height:50px;
+  align-items: center;
+}
+
 .app__dialog h5 { 
   margin-top: 20px;
   margin-left: 18px;
@@ -274,13 +278,12 @@ video {
 
 .app__dialog input {
   width: 250px;
-  margin: 20px;
+  margin: 5px;
   height: 30px;
   border: none;
   border-bottom: 1px solid rgba(0,0,0,.12);
   outline: none;
   font-size: 15px;
-  margin-top: 25px;
   color: rgba(0,0,0,.54);
   font-weight: 500;
 }
